--- a/force-app/main/default/aura/TravelSupport/TravelSupport.cmp
+++ b/force-app/main/default/aura/TravelSupport/TravelSupport.cmp
@@ -2,7 +2,7 @@
  - Created by dmytro.fedchyshyn on 28.08.2019.
  -->
 
-<aura:component description="TravelSupport" controller="TravelSupportRemote" extends="c:LightningService">
+<aura:component description="TravelSupport" controller="TravelSupportRemote">
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
@@ -10,65 +10,32 @@
     <aura:method name="hide" action="{!c.hide}"/>
 
 
-    <aura:attribute name="vendors" type="Object[]"/>
     <aura:attribute name="hasDefault" type="Boolean"/>
+    <aura:attribute name="isShowMore" type="Boolean"/>
     <aura:attribute name="defaultVendor" type="Object"/>
 
-    <aura:attribute name="showModal" type="Boolean" default="false" description="show or hide popup"/>
-    <aura:attribute name="dialogTitle" type="String" default="Travel Vendors"/>
     <aura:attribute name="htmlMessage" type="String"/>
     <aura:attribute name="message" type="String" default="{!$Label.c.StudyVisit_Popup_Text}"/>
-    <aura:attribute name="approveBtnName" type="String" default="{!$Label.c.BTN_Yes}"/>
-    <aura:attribute name="cancelBtnName" type="String" default="{!$Label.c.BTN_No}"/>
-    <aura:attribute name="closeBtnName" type="String" default="{!$Label.c.BTN_Close}"/>
 
 
-    <aura:if isTrue="{!v.showModal}">
-        <c:Popup aura:id="popup" title="{!v.dialogTitle}" size="small" showModal="true">
-            <aura:if isTrue="{!!v.hasDefault}">
-                <div class="slds-scrollable">
-                    <table class="slds-table slds-table_bordered slds-table_striped">
-                        <thead>
-                        <tr class="slds-text-title_caps">
-                            <th>
-                                <div class="slds-truncate slds-text-align--center" title="Vendor Name">Name</div>
-                            </th>
-                            <th>
-                                <div class="slds-truncate slds-text-align--center" title="Vendor Link">Link</div>
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <aura:iteration var="vendor" items="{!v.vendors}">
-                            <tr class="slds-hint-parent">
-                                <td>
-                                    <p class="slds-text-align--center">{!vendor.Name}</p>
-                                </td>
-                                <td class="slds-text-align--center">
-                                    <a href="{!vendor.Link_Vendor__c}"
-                                       class=" slds-text-link">{!vendor.Link_Vendor__c}</a>
-                                </td>
-                            </tr>
-                        </aura:iteration>
-                        </tbody>
-                    </table>
-                </div>
+    <c:Popup aura:id="popup" title="{!$Label.c.Home_Page_StudyVisit_Btn}" size="small">
+        <aura:if isTrue="{!or(v.isShowMore, !v.hasDefault)}">
+            <c:VendorsTable/>
+            <aura:set attribute="else">
+                <aura:unescapedHtml value="{!v.htmlMessage}"/>
+            </aura:set>
+        </aura:if>
+        <aura:set attribute="footerButtons">
+            <aura:if isTrue="{!or(v.isShowMore, !v.hasDefault)}">
+                <button class="apollo-btn tertiary" onclick="{!c.hide}">{!$Label.c.BTN_Close}</button>
                 <aura:set attribute="else">
-                    <aura:unescapedHtml value="{!v.htmlMessage}"/>
+                    <div class="slds-text-align--center">
+                        <label class=" slds-text-link" onclick="{!c.showAllVendors}">Show more vendors</label>
+                    </div>
+                    <button class="apollo-btn primary" onclick="{!c.doSuccess}">{!$Label.c.BTN_Yes}</button>
+                    <button class="apollo-btn tertiary" onclick="{!c.hide}">{!$Label.c.BTN_No}</button>
                 </aura:set>
             </aura:if>
-            <aura:set attribute="footerButtons">
-                <aura:if isTrue="{!!v.hasDefault}">
-                    <button class="apollo-btn tertiary" onclick="{!c.hide}">{!v.closeBtnName}</button>
-                    <aura:set attribute="else">
-                        <div class="slds-text-align--center">
-                            <label class=" slds-text-link" onclick="{!c.showAllVendors}">Show more vendors</label>
-                        </div>
-                        <button class="apollo-btn primary" onclick="{!c.doSuccess}">{!v.approveBtnName}</button>
-                        <button class="apollo-btn tertiary" onclick="{!c.hide}">{!v.cancelBtnName}</button>
-                    </aura:set>
-                </aura:if>
-            </aura:set>
-        </c:Popup>
-    </aura:if>
+        </aura:set>
+    </c:Popup>
 </aura:component>
