--- a/force-app/main/default/aura/VendorsTable/VendorsTable.cmp
+++ b/force-app/main/default/aura/VendorsTable/VendorsTable.cmp
@@ -2,5 +2,37 @@
  - Created by dmytro.fedchyshyn on 28.08.2019.
  -->
 
-<aura:component description="VendorsTable">
+<aura:component description="VendorsTable"  controller="TravelSupportRemote" extends="c:LightningService">
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+
+    <aura:attribute name="vendors" type="Object[]"/>
+    <aura:attribute name="hasDefault" type="Boolean"/>
+
+                <div class="slds-scrollable">
+                    <table class="slds-table slds-table_bordered slds-table_striped">
+                        <thead>
+                        <tr class="slds-text-title_caps">
+                            <th>
+                                <div class="slds-truncate slds-text-align--center" title="Vendor Name">Name</div>
+                            </th>
+                            <th>
+                                <div class="slds-truncate slds-text-align--center" title="Vendor Link">Link</div>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <aura:iteration var="vendor" items="{!v.vendors}">
+                            <tr class="slds-hint-parent">
+                                <td>
+                                    <p class="slds-text-align--center">{!vendor.Name}</p>
+                                </td>
+                                <td class="slds-text-align--center">
+                                    <a href="{!vendor.Link_Vendor__c}"
+                                       class=" slds-text-link">{!vendor.Link_Vendor__c}</a>
+                                </td>
+                            </tr>
+                        </aura:iteration>
+                        </tbody>
+                    </table>
+                </div>
 </aura:component>
