--- a/force-app/main/default/layouts/UserAlt-User Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/UserAlt-User Profile Layout.layout-meta.xml
@@ -89,14 +89,14 @@
         <fields>CreatedDate</fields>
         <relatedList>ProfileSkillUserByUserRelatedList</relatedList>
     </relatedLists>
-    <relatedLists>
-        <fields>ImageUrl</fields>
-        <fields>Definition</fields>
-        <fields>Message</fields>
-        <fields>Giver</fields>
-        <fields>Recipient</fields>
-        <relatedList>WorkBadgeRelatedList</relatedList>
-    </relatedLists>
+<!--    <relatedLists>-->
+<!--        <fields>ImageUrl</fields>-->
+<!--        <fields>Definition</fields>-->
+<!--        <fields>Message</fields>-->
+<!--        <fields>Giver</fields>-->
+<!--        <fields>Recipient</fields>-->
+<!--        <relatedList>WorkBadgeRelatedList</relatedList>-->
+<!--    </relatedLists>-->
     <relatedLists>
         <relatedList>UserFollowersList</relatedList>
     </relatedLists>
