--- a/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
+++ b/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
@@ -14,7 +14,6 @@
     <aura:attribute name="showSpinner" type="Boolean" default="{!true}" access="private"/>
     <aura:attribute name="delegate" type="Object" access="private"/>
     <aura:attribute name="delegateOptions" type="List" access="private"/>
-    <aura:attribute name="saveInProgress" type="Boolean" default="{!false}"/>
     <aura:attribute name="currentTab" type="String" default="all-same"/>
     <aura:attribute name="allTrialLevel" type="Object"/>
     <aura:attribute name="isCorrectEmail" type="Boolean" default="false" access="private"/>
@@ -22,8 +21,6 @@
     <aura:attribute name="changedLevels" type="List" access="private" default="[]"/>
     <aura:attribute name="changedLevelsAll" type="List" access="private" default="[]"/>
     <aura:attribute name="currentUserContactId" type="String" access="private" default=""/>
-    <aura:attribute name="alreadyExists" type="Boolean" default="false" access="private"/>
-    <aura:attribute name="alreadyExistsTitle" type="String" default="" access="private"/>
 
     <!-- methods: -->
     <aura:method name="refresh" action="{!c.doInit}" access="public"/>
@@ -37,7 +34,7 @@
 
     <!-- component body-->
     <c:RRSpinner aura:id="mainSpinner" size="medium" showSpinner="{!v.showSpinner}"/>
-    <c:Action_SaveDelegateLevelChanges aura:id="saveDelegateLevelChanges" saveInProgress="{!v.saveInProgress}"
+    <c:Action_SaveDelegateLevelChanges aura:id="saveDelegateLevelChanges"
                                        userMode="{!v.userMode}"/>
     <aura:if isTrue="{!v.isInitialized}">
         <div class="rr-top-bar multi-mode" id="stickyBar" aura:id="stickyBar">
@@ -140,8 +137,7 @@
                                                                           changedLevels="{!v.changedLevels}"/>
                                             </aura:iteration>
                                         </div>
-                                        <fieldset class="{!'all-same-container sdli-container ' + if(v.currentTab == 'all-same','','hidden')}" disabled="{!v.alreadyExists}"
-                                                  title="{!v.alreadyExists?v.alreadyExistsTitle:''}">
+                                        <fieldset class="{!'all-same-container sdli-container ' + if(v.currentTab == 'all-same','','hidden')}">
                                             <c:StudyDelegateLevelItem aura:id="study-level" studyLevel="{!v.allTrialLevel}"
                                                                       options="{!v.delegateOptions}"
                                                                       changedLevels="{!v.changedLevelsAll}"/>
@@ -160,19 +156,18 @@
                                     <div class="slds-col slds-size_3-of-5 slds-medium-size_2-of-3 button-container">
                                         <aura:if isTrue="{!v.isStaff}">
                                             <button class="apollo-btn primary ntm-button" onclick="{!c.doSaveChanges}"
-                                                    disabled="{!or(or(or(or(or(not(v.isCorrectEmail),
+                                                    disabled="{!or(or(or(or(not(v.isCorrectEmail),
                                                         and(not(v.isCorrectContactData),v.delegate.delegateContact.Id==undefined)),
                                                         and(v.currentTab=='by-study',empty(v.changedLevels))),
                                                         and(v.currentTab=='all-same',empty(v.changedLevelsAll))),
-                                                        v.delegate.delegateContact.Id == v.currentUserContactId),
-                                                        v.alreadyExists)
+                                                        v.delegate.delegateContact.Id == v.currentUserContactId)
 }"
-                                                    title="{!if(v.alreadyExists, v.alreadyExistsTitle,if(or(or(or(or(not(v.isCorrectEmail),
+                                                    title="{!if(or(or(or(or(not(v.isCorrectEmail),
                                                         and(not(v.isCorrectContactData),v.delegate.delegateContact.Id==undefined)),
                                                         and(v.currentTab=='by-study',empty(v.changedLevels))),
                                                         and(v.currentTab=='all-same',empty(v.changedLevelsAll))),
                                                         v.delegate.delegateContact.Id == v.currentUserContactId),
-                                                        $Label.c.PG_NTM_T_Correct_Info,''))}">
+                                                        $Label.c.PG_NTM_T_Correct_Info,'')}">
                                                 {!$Label.c.PG_NTM_BTN_Save_Team_Member}
                                             </button>
                                             <aura:set attribute="else">
