--- a/force-app/main/default/aura/StudyDelegateLevelItem/StudyDelegateLevelItem.cmp
+++ b/force-app/main/default/aura/StudyDelegateLevelItem/StudyDelegateLevelItem.cmp
@@ -8,12 +8,11 @@
     <aura:attribute name="options" type="List" required="true"/>
     <aura:attribute name="prevValue" type="String" required="false" access="private"/>
     <aura:attribute name="changedLevels" type="List"/>
-    <aura:attribute name="refreshTrigger" type="Boolean"/>
     <aura:attribute name="showStudyName" type="Boolean" default="true"/>
+    <aura:attribute name="ignoreUpdates" type="Boolean" default="false"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="change" value="{!v.studyLevel.delegateLevel}" action="{!c.onLevelChange}"/>
-    <aura:handler name="change" value="{!v.refreshTrigger}" action="{!c.doInit}"/>
 
     <aura:method name="refresh" action="{!c.doInit}" access="public"/>
 
