--- a/force-app/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
@@ -76,6 +76,10 @@
                 <behavior>Edit</behavior>
                 <field>Visit_Results_Opt_In__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Current_Participant_Enrollment__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
