--- a/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
+++ b/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
@@ -6,6 +6,7 @@
 
     <!-- attributes: -->
     <aura:attribute name="participantState" type="Object"/>
+    <aura:attribute name="initialized" type="Boolean"/>
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
@@ -21,7 +22,7 @@
         </div>
         <div class="hp-welcome-msg">{!v.participantState.welcomeMessage}</div>
 
-        <aura:if isTrue="{!!empty(v.participantState.pe)}">
+        <aura:if isTrue="{!v.initialized}">
             <div class="slds-grid slds-gutters slds-wrap">
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                     <div class="slds-grid slds-grid_vertical slds-gutters">
