--- a/force-app/main/default/aura/ApproveLanguageIRB/ApproveLanguageIRB.css
+++ b/force-app/main/default/aura/ApproveLanguageIRB/ApproveLanguageIRB.css
@@ -6,10 +6,16 @@
     border: 1px solid #e4e4e4;
     border-radius: 5px;
     padding: 14px;
+    min-height: 500px;
 }
 
-.THIS .filters-section {
-    margin-bottom: 15px;
+.THIS .irb-table {
+    max-width: 100%;
+    max-height: 500px;
+}
+
+.THIS .empty-approved-lang {
+    background-color: antiquewhite;
 }
 
 .THIS .cell-wrap {
@@ -18,6 +24,12 @@
 }
 
 .THIS .save-btn {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.THIS .padding-info {
     display: flex;
     justify-content: center;
     align-items: center;
