--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -1,16 +1,20 @@
-<aura:component controller="ParticipantVisitsRemote" description="StudyVisitsPreviewPanel">
+<aura:component controller="ParticipantVisitsRemote" description="StudyVisitsPreviewPanel" extends="c:LightningService">
 
     <ltng:require scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
     <aura:attribute name="visitWrappers" type="PatientVisitService.VisitWrapper[]"/>
+    <aura:attribute name="vendors" type="Object[]"/>
+    <aura:attribute name="hasVendors" type="Boolean"/>
 
     <div class="sv-panel rr-white-panel">
         <c:RRSpinner aura:id="spinner" size="small" showSpinner="true"/>
         <div class="sv-header">
             <div class="sv-title">{!$Label.c.Home_Page_StudyVisit_Title}</div>
-            <button class="apollo-btn primary sv-btn" onclick="{!c.onTravel}">
-                {!$Label.c.Home_Page_StudyVisit_Btn}
-            </button>
+            <aura:if isTrue="{!v.hasVendors}">
+                <button class="apollo-btn primary sv-btn" onclick="{!c.onTravel}">
+                    {!$Label.c.Home_Page_StudyVisit_Btn}
+                </button>
+            </aura:if>
         </div>
         <div class="sv-body">
             <aura:if isTrue="{!!empty(v.visitWrappers)}">
@@ -24,7 +28,10 @@
                         <tr>
                             <td>{!visitWrapper.visit.Visit__r.Patient_Portal_Name__c}</td>
                             <td>{!visitWrapper.visit.Visit_Schedule__c}</td>
-                            <td><c:RRIconSplitter class="svl-icon" value="{!visitWrapper.icons}" numOfIconsToDisplay="3"/></td>
+                            <td>
+                                <c:RRIconSplitter class="svl-icon" value="{!visitWrapper.icons}"
+                                                  numOfIconsToDisplay="3"/>
+                            </td>
                         </tr>
                     </aura:iteration>
                 </c:RRTable>
@@ -35,5 +42,5 @@
             <c:RRLink page="study-workspace?tab=tab-visits" label="{!$Label.c.Resources_See_All}"/>
         </div>
     </div>
-        <c:TravelSupport aura:id="showVendors" hasDefault="true"/>
+    <c:TravelSupport aura:id="showVendors" vendors="{!v.vendors}"/>
 </aura:component>
