--- a/force-app/main/default/aura/VendorsTable/VendorsTable.cmp
+++ b/force-app/main/default/aura/VendorsTable/VendorsTable.cmp
@@ -2,11 +2,11 @@
  - Created by dmytro.fedchyshyn on 28.08.2019.
  -->
 
-<aura:component description="VendorsTable"  controller="TravelSupportRemote" extends="c:LightningService">
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+<aura:component description="VendorsTable">
 
     <aura:attribute name="vendors" type="Object[]"/>
     <aura:attribute name="hasDefault" type="Boolean"/>
+
     <c:RRTable>
                 <div class="slds-scrollable">
                     <table class="slds-table slds-table_bordered slds-table_striped">
@@ -18,23 +18,16 @@
                             <th>
                                 <div class="slds-truncate slds-text-align--center" title="Vendor Link">Link</div>
                             </th>
-                            <th>
-                                <div class="slds-truncate slds-text-align--center" title="Vendor Link">Default Vendor</div>
-                            </th>
                         </tr>
                         </thead>
                         <tbody>
                         <aura:iteration var="vendor" items="{!v.vendors}" indexVar="ind">
                             <tr class="slds-hint-parent">
                                 <td>
-                                    <p class="slds-text-align--center">{!vendor.travelVendor.Name}</p>
+                                    <p class="slds-text-align--center">{!vendor.Name}</p>
                                 </td>
                                 <td class="slds-text-align--center" onclick="{!c.redirectToLink}" data-ind="{!vendor.Link_Vendor__c}">
-                                    <label class=" slds-text-link" >{!vendor.travelVendor.ink_Vendor__c}</label>
-                                </td>
-                                <td class="slds-text-align--center">
-                                    <ui:inputCheckbox aura:id="checkbox"
-                                                      value="{!vendor.travelVendor.isDefault}"/>
+                                    <label class=" slds-text-link" >{!vendor.Link_Vendor__c}</label>
                                 </td>
                             </tr>
                         </aura:iteration>
