PEH-932 Add field Is_Manual__c in TravelVendorSettings__c

--- a/force-app/main/default/layouts/TravelVendorSettings__c-TravelVendorSettings Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/TravelVendorSettings__c-TravelVendorSettings Layout.layout-meta.xml
@@ -11,16 +11,20 @@
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>TravelVendor__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Study_Site__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>isEnable__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Is_Manual__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
